Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-40750

Deadlock when using Qt.inputMethod.visible on Android

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P1: Critical
    • 5.4.0
    • 5.3.1, 5.4.0
    • Qt 5.3.1 and Nexus 5
    • Android
    • I2490897b0f65e0d92214907e239b10b372d949dd

    Description

      Using Qt.inputMethod.visible in QML application causes it to freeze. If I remove line 27 from deadlock.qml no freeze anymore.

      Steps:
      1. Tap input field.
      2. Write some.
      3. Press enter on VKB.
      4. Repeat 1-3 until application freezes (some times it might take a while)

      Expected: No freezing
      Actual: Application freezes and when user tries to regain focus to TextInput application log says :
      I/dalvikvm(24430): threadid=3: reacting to signal 3
      I/dalvikvm(24430): Wrote stack traces to '/data/anr/traces.txt' (attached traces)

      Attachments

        1. deadlock.qml
          1 kB
        2. traces.txt
          210 kB

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              tvete Paul Olav Tvete
              samuelnevala Samuel Nevala
              Votes:
              2 Vote for this issue
              Watchers:
              9 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes